--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 57 points<br>
+Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 58 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -66,29 +66,30 @@ Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Locksmith (Level -inf)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
+<li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   2424 rev-parse
-   2382 symbolic-ref
-   2378 ls-files
-    181 status
+   2462 rev-parse
+   2420 symbolic-ref
+   2416 ls-files
+    195 status
      68 checkout
-     48 pull
-     46 log
-     40 add
-     32 commit
+     49 pull
+     47 log
+     45 add
+     38 commit
      31 branch
      28 diff
      19 tag
-     18 help
+     19 help
      18 achievements
      14 show
-     13 push
-      9 fetch
+     14 push
+     10 fetch
       7 config
       6 submodule
       6 reset
