--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 63 points<br>
+Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 64 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -65,6 +65,7 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
@@ -78,14 +79,14 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3398 rev-parse
-   3336 symbolic-ref
-   3336 ls-files
-    286 status
+   3417 rev-parse
+   3355 symbolic-ref
+   3355 ls-files
+    289 status
      87 checkout
-     73 pull
+     74 pull
      65 add
-     61 log
+     63 log
      51 commit
      38 diff
      36 branch
@@ -97,15 +98,15 @@ Git commands sorted by usage:
      16 fetch
       8 reset
       8 config
-      6 submodule
+      7 submodule
       6 merge
       6 clean
       5 stash
       5 init
+      4 instaweb
       4 gc
       3 rebase
       3 mv
-      3 instaweb
       3 format-patch
       2 whatchanged
       2 Wed
