--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 65 points<br>
+Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 66 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -32,6 +32,7 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -80,41 +81,41 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3695 rev-parse
-   3629 symbolic-ref
-   3627 ls-files
-    306 status
-    100 checkout
-     82 pull
-     72 log
+   3887 rev-parse
+   3821 symbolic-ref
+   3819 ls-files
+    321 status
+    108 checkout
+     88 pull
+     75 log
      67 add
-     55 commit
+     56 commit
      43 diff
-     36 branch
-     26 tag
-     26 help
-     25 push
+     41 branch
+     28 tag
+     28 push
+     27 help
      18 achievements
      17 show
      16 fetch
-      8 reset
-      8 merge
+     11 merge
+     10 reset
       8 config
       7 submodule
-      6 clean
+      7 clean
       5 stash
       5 init
       5 clone
       4 instaweb
       4 gc
+      3 whatchanged
       3 rebase
       3 mv
+      3 ls-remote
       3 format-patch
-      2 whatchanged
       2 Wed
       2 --version
       2 Thu
-      2 ls-remote
       2 blame
       1 rm
       1 grep
