--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 72 points<br>
+Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 73 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -40,6 +40,7 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Fisherman (Level 1)</div>  <div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
+<li><div class="title">Apprentice Goldsmith (Level 3)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -87,26 +88,26 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   5554 rev-parse
-   5467 ls-files
-   5425 symbolic-ref
-    394 status
-    179 checkout
-    149 pull
-     95 log
-     73 add
-     66 branch
-     64 commit
-     52 diff
-     44 push
-     39 help
-     32 tag
-     31 reset
-     20 merge
-     20 fetch
+   6509 rev-parse
+   6403 ls-files
+   6380 symbolic-ref
+    426 status
+    225 checkout
+    182 pull
+    111 log
+     95 branch
+     83 add
+     75 commit
+     57 push
+     57 diff
+     45 help
+     40 tag
+     37 reset
+     28 merge
+     26 show
+     21 fetch
      20 achievements
-     17 show
-     15 revert
+     17 revert
       8 instaweb
       8 config
       8 clean
